[package]
name = "simple-src-docs"
version = "0.6.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive", "wrap_help"] }
either = { version = "1.14.0", features = ["serde"] }
lazy_static = "1.5.0"
mustache = "0.9.0"
regex = "1.11.1"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_regex = "1.1.0"
toml = "0.8.20"
validator = { version = "0.20.0", features = ["derive"] }
walkdir = "2.5.0"
wax = "0.6.0"
